--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,3 +1,17 @@
+body, html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+main, div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -15,4 +29,92 @@
   color: white;
 /*  font-weight: bold;*/
   font-size: 1em;
+}
+
+.login-container {
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0, 0.8);
+  z-index: 10;
+}
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 500px;
+  padding: 80px 40px;
+  background: lightblue;
+  border-radius: 25px;
+  z-index: 11;
+}
+
+.login-box h2{
+	margin: 0;
+	padding: 0 0 20px;
+	color: #fff;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.login-box p{
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+	color: #fff;
+}
+.login-box h6{
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	text-align: center;
+}
+
+
+.login-box input{
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+.login-box input[type=email],
+.login-box input[type=password] {
+	border: none;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 35px;
+	color: #fff;
+	font-size: 15px;
+}
+
+.login-box input[type=submit] {
+	height: 30px;
+	color: #fff;
+	font-size: 15px;
+	background: #6699ff;
+	cursor: pointer;
+	border-radius: 25px;
+	border: none;
+	outline: none;
+	margin-top: 15%;
+}
+
+.login-box button{
+	height: 30px;
+	width: 100%;
+	color: #fff;
+	font-size: 15px;
+	background: blue;
+	cursor: pointer;
+	border-radius: 25px;
+	border: none;
+	outline: none;
+	margin-top: 2%;
+	/*margin-left: 38%*/;
 }
