--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -12,25 +12,6 @@ div.login-container {
   left: 0;
 }
 
-.container {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-}
-
-.contained {
-  background: tomato;
-  padding: 5px;
-  width: auto;
-  height: 100px;
-  margin-top: 10px;
-  
-  line-height: 70px;
-  color: white;
-/*  font-weight: bold;*/
-  font-size: 1em;
-}
-
 .login-container {
   width: 100%;
   height: 100%;
@@ -49,7 +30,7 @@ div.login-container {
   transform: translate(-50%, -50%);
   width: 400px;
   height: 500px;
-  padding: 80px 40px;
+  padding: 40px 40px;
   background: lightblue;
   border-radius: 25px;
   z-index: 11;
@@ -69,13 +50,6 @@ div.login-container {
 	font-weight: bold;
 	color: #fff;
 }
-.login-box h6{
-	margin: 0;
-	padding: 0;
-	color: #fff;
-	text-align: center;
-}
-
 
 .login-box input{
 	width: 100%;
@@ -83,7 +57,8 @@ div.login-container {
 }
 
 .login-box input[type=email],
-.login-box input[type=password] {
+.login-box input[type=password],
+.login-box input[type=text] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
@@ -116,5 +91,11 @@ div.login-container {
 	border: none;
 	outline: none;
 	margin-top: 2%;
-	/*margin-left: 38%*/;
+}
+
+.login-box div.link{
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	text-align: center;
 }
