Fixed tel field and started ReadMe

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -69,7 +69,8 @@ div.login-container {
 
 .login-box input[type=email],
 .login-box input[type=password],
-.login-box input[type=text] {
+.login-box input[type=text],
+.login-box input[type=tel] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
