--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -126,7 +126,7 @@ input[type=datetime-local]{
   width: 300px;
   height: 200px;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
   display: inline-block;
 }
 
@@ -144,6 +144,7 @@ input[type=datetime-local]{
 }
 
 .flip-card-front, .flip-card-back {
+  padding-top: 20px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -159,4 +160,8 @@ input[type=datetime-local]{
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+}
+
+.flip-card-back li {
+  text-align: left;
 }
