updated welcome email

--- a/backend/app/views/user_mailer/welcome_email.html.erb
+++ b/backend/app/views/user_mailer/welcome_email.html.erb
@@ -1,6 +1,6 @@
-<h1>Welcome to boolapool.herokuapp.com, <%= @user.first_name %></h1>
+<h1>Welcome to BoolaPool, <%= @user.first_name %>!</h1>
 <p>
-    You have successfully signed up to boolapool.herokuapp.com! <br>
+    You have successfully signed up! <br>
 </p>
 <p>
     To login to the site, just follow this link: <%= @url %>.
