--- a/backend/app/views/user_mailer/welcome_email.text.erb
+++ b/backend/app/views/user_mailer/welcome_email.text.erb
@@ -1,8 +1,8 @@
 
-Welcome to boolapool.herokuapp.com, <%= @user.first_name %>
+Welcome to BoolaPool, <%= @user.first_name %>!
 ===============================================
  
-You have successfully signed up to boolapool.herokuapp.com!
+You have successfully signed up!
  
 To login to the site, just follow this link: <%= @url %>.
  
