--- a/backend/app/views/user_mailer/new_trip_email.text.erb
+++ b/backend/app/views/user_mailer/new_trip_email.text.erb
@@ -6,7 +6,7 @@ Trip Details:
                                         
 Destination: <%= @trip.destination %> (<%= @trip.address %>)
 Capacity: <%= @trip.capacity %>
-Departure Time Range: <%= @trip.start_time %> - <%= @trip.end_time %>
+Departure Time Range: <%= @trip.start_time.strftime("%a, %b %d, %Y at %I:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %I:%M%p") %>
  
 To go to BoolaPool, just follow this link: <%= @url %>.
  
