--- a/backend/app/views/user_mailer/join_email.html.erb
+++ b/backend/app/views/user_mailer/join_email.html.erb
@@ -10,14 +10,18 @@
 <% end %>
 
 <p>Capacity: <%= @trip.capacity %></p>
-<p>Departure Time Range (all times EST): <%= @trip.start_time.strftime("%a, %b %d, %Y at %I:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %I:%M%p") %> <br> </p>
+<p>Departure Time Range (EST): <%= @trip.start_time.strftime("%a, %b %d, %Y at %I:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %I:%M%p") %> <br> </p>
 
 <i>Contact your fellow carpoolees to figure out a specific departure time!</i>
 
 <h3>Trip Members:</h3>
 <ul>
     <% @trip.users.each do |user| %>
-        <li><%= "#{user.first_name} #{user.last_name} -- #{user.email} (Phone #: #{user.phone})" %></li>
+        <% if user.phone.length == 10 %>
+            <li><%= "#{user.full_name} -- #{user.email} (Phone #: #{user.phone})" %></li>
+        <% else %>
+            <li><%= "#{user.full_name} -- #{user.email}" %></li>
+        <% end %>
     <% end %>
 </ul>
 
