--- a/backend/app/views/user_mailer/welcome_email.html.erb
+++ b/backend/app/views/user_mailer/welcome_email.html.erb
@@ -1,8 +1,9 @@
 <h1>Welcome to BoolaPool, <%= @user.first_name %>!</h1>
-<p>
-    You have successfully signed up! <br>
-</p>
-<p>
-    To login to the site, just follow this link: <%= @url %>.
-</p>
+
+<p>You have successfully signed up!</p>
+
+<p>To go to BoolaPool, just follow this link: <%= @url %>.</p>
+
 <p>Thanks for joining and have a great day!</p>
+
+<p>From, <br> The BoolaPool Team 🐶</p>
