--- a/backend/app/views/user_mailer/welcome_email.text.erb
+++ b/backend/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,12 @@
-
 Welcome to BoolaPool, <%= @user.first_name %>!
+
 ===============================================
  
 You have successfully signed up!
  
-To login to the site, just follow this link: <%= @url %>.
+To go to BoolaPool, just follow this link: <%= @url %>.
  
 Thanks for joining and have a great day!
+
+From,
+The BoolaPool Team 🐶
