--- a/backend/app/views/user_mailer/join_email.text.erb
+++ b/backend/app/views/user_mailer/join_email.text.erb
@@ -13,16 +13,19 @@ Trip Details:
 <% end %>
 
 Capacity: <%= @trip.capacity %>
-Departure Time Range (EST): <%= @trip.start_time.strftime("%a, %b %d, %Y at %l:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %l:%M%p") %> <br>
+Departure Time Range (EST): <%= @trip.start_time.strftime("%a, %b %d, %Y at %l:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %l:%M%p") %>
 
 Contact your fellow carpoolees to figure out a specific departure time!
 
 Trip Members:
+
 <% @trip.users.each do |user| %>
     <% if user.phone.length == 10 %>
-        <%= "#{user.full_name} -- #{user.email} (Phone #: #{user.phone})" %> <br>
+        <%= "#{user.full_name} -- #{user.email} (Phone #: #{user.phone})" %>
+
     <% else %>
-        <%= "#{user.full_name} -- #{user.email}" %> <br>
+        <%= "#{user.full_name} -- #{user.email}" %>
+        
     <% end %>
 <% end %>
 
