--- a/backend/app/views/user_mailer/unjoin_notification_email.html.erb
+++ b/backend/app/views/user_mailer/unjoin_notification_email.html.erb
@@ -1,17 +1,32 @@
-<h1><%= @unjoined_user.first_name %> just unjoined your carpool group</h1>
+<h1><%= @unjoined_user.full_name %> just unjoined your carpool group</h1>
 <h3>Trip Details:</h3>
-                                    
-<p>Destination: <%= @trip.destination %> (<%= @trip.address %>)</p>
+
+<% if @trip.destination == "Yale" %>
+    <p>From: <%= @trip.origin %> (<%= @trip.address %>)</p>
+    <p>To: <%= @trip.destination %></p>
+<% else %>
+    <p>From: <%= @trip.origin %></p>
+    <p>To: <%= @trip.destination %> (<%= @trip.address %>)</p>
+<% end %>
+
 <p>Capacity: <%= @trip.capacity %></p>
-<p>Departure Time Range: <%= @trip.start_time.strftime("%a, %b %d, %Y at %I:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %I:%M%p") %> <br> </p>
+<p>Departure Time Range (EST): <%= @trip.start_time.strftime("%a, %b %d, %Y at %l:%M%p") %> - <%= @trip.end_time.strftime("%a, %b %d, %Y at %l:%M%p") %> <br> </p>
+
+<i>Contact your fellow carpoolees to figure out a specific departure time!</i>
 
 <h3>Trip Members:</h3>
 <ul>
     <% @trip.users.each do |user| %>
-        <li><%= "#{user.first_name} #{user.last_name} -- #{user.email} (Phone #: #{user.phone})" %></li>
+        <% if user.phone.length == 10 %>
+            <li><%= "#{user.full_name} -- #{user.email} (Phone #: #{user.phone})" %></li>
+        <% else %>
+            <li><%= "#{user.full_name} -- #{user.email}" %></li>
+        <% end %>
     <% end %>
 </ul>
 
 <p>To go to BoolaPool, just follow this link: <%= @url %>.</p>
 
 <p>Thanks for using BoolaPool and have a great day!</p>
+
+<p>From, <br> The BoolaPool Team 🐶</p>
