--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -35,6 +35,12 @@ div.modal-dialog {
   top: 20%;
 }
 
+div#newTripModal #new-trip
+
+.new-trip {
+  width: 600px; !important;
+}
+
 div.modal-header {
   border: none;
   padding: 10px 16px;
@@ -412,4 +418,60 @@ div.profile-subhead-text {
   padding: .75rem;
   vertical-align: top;
   border-top: 1px solid white;
+}
+
+form.new-trip-from-yale input[type=text] {
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid #e6f2ff;
+  background: transparent;
+  outline: none;
+  height: 17px;
+  color: black;
+  font-size: 12px;
+  width: 60%;
+  vertical-align: bottom;
+}
+
+form.new-trip-from-yale select {
+  margin-left: 5%;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid #e6f2ff;
+  outline: none;
+  height: 35px;
+  color: black;
+  font-size: 15px;
+  width: 90%;
+}
+
+form.new-trip-from-yale input[type=number] {
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid #e6f2ff;
+  background: transparent;
+  outline: none;
+  height: 17px;
+  color: black;
+  font-size: 12px;
+  width: 5%;
+  vertical-align: bottom;
+}
+
+form.new-trip-from-yale label{
+  vertical-align: middle;
+  color: black;
+}
+
+form.new-trip-from-yale input[type=submit] {
+  height: 30px;
+  color: #fff;
+  font-size: 18px;
+  background: #74b0f1;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  margin-left: 20%;
+  width: 60%;
 }
